Swagger correction in DELETE
